--- a/css/utils/decorative.css
+++ b/css/utils/decorative.css
@@ -1,7 +1,7 @@
 /* Decorative Elements */
 
 .decorative-dots {
-    position: fixed;
+    position: absolute;
     width: 170px;
     height: 170px;
     z-index: 100;
