position each section

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -15,7 +15,7 @@
 .subtitle {
     font-size: 1.1rem;
     line-height: 1.8;
-    color: var(--gray-text);
+    color: var(--white-text);
     margin-bottom: 2rem;
 }
 
