no cursor paw on mobile version

--- a/css/utils/responsive.css
+++ b/css/utils/responsive.css
@@ -75,6 +75,10 @@
     .scroll-down {
         display: none !important;
     }
+
+    #cursor-paw {
+        display: none !important;
+    }
 }
 
 @media (max-width: 480px) {
