basic rat game easter egg (click for catching)

--- a/css/utils/responsive.css
+++ b/css/utils/responsive.css
@@ -93,6 +93,11 @@
         display: block !important;
     }
 
+    .cheese-icon,
+    .mouse-icon {
+        display: none !important;
+    }
+
     /* Single column layout for tablets */
     .articles-grid {
         grid-template-columns: 1fr;
